--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="it.unipi.RescuePulse.mobile">
+
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -7,17 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RescuePulse">
+        android:theme="@style/AppTheme">
+
+        <!-- Main Activity -->
         <activity
             android:name=".MobileMainActivity"
             android:exported="true"
-            android:theme="@style/Theme.RescuePulse">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Setup Activity -->
+        <activity
+            android:name=".SetupActivity"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
