Fix : Added Post setup activity to the AndroidManifest file and

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:name=".SetupActivity"
             android:theme="@style/AppTheme" />
 
+        <!-- Post Setup Activity -->
+        <activity
+            android:name=".PostSetupActivity"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
